[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features=false}
itertools = { version = "0.10", default_features = false }
shrinkwraprs = { version = "0.3", optional = true }
derive_more = { version = "0.99", optional = true }
indexmap = { version = "1", optional = true }
serde =  { version = "1", features = ["derive"], optional = true }

[features]
default = []
std = []
serde = ["shrinkwraprs", "derive_more", "dep:serde", "indexmap"]